--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
 <li><h3> Close to 'breakthrough tool'</h3></li>
 <li><h3> Catches between 30-90% of defects </h3>
 
-<p>Depeneding on (<a href="http://www.cs.umd.edu/projects/SoftEng/ESEG/papers/82.78.pdf">Boehm &amp; Basili 2001</a>):   - number and type of peer reviews, </p>
+<p>Depeneding on:</p>
 
 <ul>
+<li>number and type of peer reviews, </li>
 <li>size and complexity of the system,</li>
-<li>frequency of defects better caught by execution.</li>
+<li>frequency of defects better caught by execution. 
+(<a href="http://www.cs.umd.edu/projects/SoftEng/ESEG/papers/82.78.pdf">Boehm &amp; Basili 2001</a>)</li>
 </ul></li>
 </ol>
 
@@ -71,7 +73,7 @@ People think in different ways, make different assumptions, notcie different thi
 
 </section>
     <section class="slide " id="slide-4">
-  <h2>Why so un popular?</h2>
+  <h2>Why so un-popular?</h2>
   <ol>
 <li><h3> It's cheap </h3>
 
@@ -93,12 +95,14 @@ People think in different ways, make different assumptions, notcie different thi
   <ol>
 <li><h3> Do it early </h3>
 
-<p>Cheaper to fix problems when caught early (<a href="http://www.cs.umd.edu/projects/SoftEng/ESEG/papers/82.78.pdf">Boehm &amp; Basili 2001</a>)</p></li>
+<p>Cheaper to fix problems when caught early </p></li>
 <li><h3> Combine with other error detection tools</h3>
 
 <p>Code review, analysis tools, and testing catch different classes of
 defects at different points in the development cycle.</p></li>
 </ol>
+
+<p>(<a href="http://www.cs.umd.edu/projects/SoftEng/ESEG/papers/82.78.pdf">Boehm &amp; Basili 2001</a>)</p>
 
 </section>
 </body>
