--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
   <article>
     <ol>
 <li><p><h3>Two brains better than one.</h3>
-People think in different ways, make different assumptions, notcie different things.</p></li>
+People think in different ways, make different assumptions, notice different things.</p></li>
 <li><p><h3> Tests programmers logic</h3>
-Can someone else follow logic?</p></li>
+Can someone else follow your logic?</p></li>
 <li><p><h3>Encourgaes you to solve problems yourself.</h3>
 Explaining something to someone else forces you to focus on details.</p></li>
 </ol>
