--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 <li><h3> Inspection of code by a group </h3>
 
 <p>Presnetation of &amp; intensive review of your code. </p></li>
-<li><h3> A 'breakthrough tool' [Glass, 2003]()</h3></li>
+<li><h3> A 'breakthrough tool' </h3>
+
+<p>according to <a href="http://www.amazon.com/Facts-Fallacies-Software-Engineering-Robert/dp/0321117425">Glass, 2003</a></p></li>
 <li><h3> Catches between 30-90% of defects </h3>
 
 <p>Depeneding on:</p>
@@ -87,7 +89,7 @@ Explaining something to someone else forces you to focus on details.</p></li>
 
       <slide class="" id="slide-3" style="background:;">
   <hgroup>
-    <h2>Why so un-popular?</h2>
+    <h2>Why so unpopular?</h2>
   </hgroup>
   <article>
     <ol>
